added and configured pug

--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,13 @@
   <body>
     <div class="container">
       <div class="jumbotron">Serving static files</div>
+      <!-- <ul>
+        each val in list
+        <li>
+          val
+        </li>
+      </ul> -->
+
     </div>
 
     <script src="js/jquery.min.js"></script>
