--- a/src/views/bookList.ejs
+++ b/src/views/bookList.ejs
@@ -29,20 +29,7 @@
       <%}%>
     </div>
     <nav class="collapse navbar-collapse" role="navigation">
-      <ul class="nav navbar-nav">
-        <li>
-          <a href="#">Category</a>
-        </li>
-        <li>
-          <a href="#">Category</a>
-        </li>
-        <li>
-          <a href="#">Category</a>
-        </li>
-        <li>
-          <a href="#">Category</a>
-        </li>        
-      </ul>
+
       <ul class="nav navbar-right navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-search"></i></a>
@@ -100,23 +87,27 @@
           
           
           <!--/stories-->
+          
+          <%for(let i=0; i<books.length; i++) {%>
             <div class="row">    
             <br>
             <div class="col-md-2 col-sm-3 text-center">
               <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/men/58.jpg" style="width:100px;height:100px" class="img-circle"></a>
             </div>
             <div class="col-md-10 col-sm-9">
-              <h3>Repurpose content</h3>
+              <h3><%=books[i].title%></h3>
               <div class="row">
                 <div class="col-xs-9">
-                  <h4><span class="label label-default">Tumwesigye 1992</span></h4><h4>
+                  <h4><span class="label label-default"><%=books[i].author%></span></h4><h4>
                   <small style="font-family:courier,'new courier';" class="text-muted">2 hours ago  • 
+                    <a href="/books/<%=i%>" class="text-muted">Read More</a></small>
                   </h4></div>
                 <div class="col-xs-3"></div>
               </div>
               <br><br>
             </div>
-          </div>
+          </div>          
+          <%}%>
           <hr>
           <!--/stories-->
           
