--- a/src/views/bookView.ejs
+++ b/src/views/bookView.ejs
@@ -99,8 +99,8 @@
                 <div class="col-xs-9">
                   <h4><span class="label label-default"><%=book.author%></span></h4><h4>
                   <small style="font-family:courier,'new courier';" class="text-muted">2 hours ago 
-                   
-                  </h4></div>
+                  </h4>
+                </div>
                 <div class="col-xs-3"></div>
               </div>
               <br><br>
