--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -103,26 +103,16 @@
             <div class="row">    
             <br>
             <div class="col-md-2 col-sm-3 text-center">
-              <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/men/58.jpg" style="width:100px;height:100px" class="img-circle"></a>
-            </div>
-            <div class="col-md-10 col-sm-9">
-              <h3>Repurpose content</h3>
-              <div class="row">
-                <div class="col-xs-9">
-                  <h4><span class="label label-default">Tumwesigye 1992</span></h4><h4>
-                  <small style="font-family:courier,'new courier';" class="text-muted">2 hours ago  • 
-                  </h4></div>
-                <div class="col-xs-3"></div>
-              </div>
-              <br><br>
+              <h2>Sign Up!</h2> <br>
+              <form action="/auth/signUp" method ="POST">
+              UserName: <input type="text" name="userName" id="userName"><br><br>
+              Password: <input type="password" name="password" id="passsword"> <br><br>
+              <button type="submit">Sign Up</button>
+            </form>
             </div>
           </div>
           <hr>
           <!--/stories-->
-          
-          
-          <a href="/" class="btn btn-primary pull-right btnNext">More <i class="glyphicon glyphicon-chevron-right"></i></a>
-        
           
         </div>
       </div>
