Enabled user storage into the database

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -105,7 +105,7 @@
             <div class="col-md-2 col-sm-3 text-center">
               <h2>Sign Up!</h2> <br>
               <form action="/auth/signUp" method ="POST">
-              UserName: <input type="text" name="userName" id="userName"><br><br>
+              UserName: <input type="text" name="username" id="userName"><br><br>
               Password: <input type="password" name="password" id="passsword"> <br><br>
               <button type="submit">Sign Up</button>
             </form>
