Implemented dynamic IDs in API calls

--- a/src/views/bookView.ejs
+++ b/src/views/bookView.ejs
@@ -104,6 +104,7 @@
                 </div>
                 <div class="col-xs-3"></div>
               </div>
+              <!-- ejs by default escapes everything. Override that using a '-' -->
               <br><%-book.details.description%><br>
             </div>
           </div>
